# TDycore

./: .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Doxyfile  GNUmakefile  LICENSE  README.md  gmakefile  makefile
.github/workflows/: auto_pr_test.yml  auto_publish_docs.yml
.travis/: install-linux-deps.sh  install-osx-deps.sh  install-petsc.sh
demo/: .gitignore  convergence.py  makefile  mpfao-prob4.regression.gold  mpfao.c  mpfao.cfg  mpfaof90-np3.regression.gold  mpfaof90.F90  sample.c  steady-wy-np3.regression.gold  steady-wy.regression.gold  steady.c  steady.cfg  transient-wy.regression.gold  transient.c
demo/SPE10/: makefile  steady.c
demo/box_timing/: run.sh
demo/elm/: .gitignore  EMI_DataDimensionMod.F90  EMI_DataMod.F90  EMI_SoilStateType_Constants.F90  EMI_WaterFluxType_Constants.F90  EMI_WaterStateType_Constants.F90  ExternalModelConstants.F90  ExternalModelTDycore.F90  abortutils.F90  clm_varctrl.F90  elm.F90  elm_tdycore_interface_data.F90  landunit_varcon.F90  makefile  mapping.F90  shr_mpi_mod.F90  shr_sys_mod.F90
demo/learning/: learning_dmplex_box_f.F90  learning_dmplex_box_mesh_f.F90  learning_dmplex_mixed_f.F90  makefile
demo/mpfao/: .gitignore  learn_dmplex.c  makefile  mpfao-3d-prob.regression.gold  mpfao-64xy-3z-wedge.regression.gold  mpfao-prob1.regression.gold  mpfao-prob2.regression.gold  mpfao-prob3-perturb-np3.regression.gold  mpfao-prob3.regression.gold  mpfao-prob4.regression.gold  mpfao.c  mpfao.cfg
demo/mpfaof90/: .gitignore  makefile  mpfaof90.F90  mpfaof90.cfg  mpfaof90.regression.gold
demo/qa_test/: qa_test.c
demo/richards/: .gitignore  initial.h5  makefile  richards-driver-dae.regression.gold  richards-driver-snes-checkpoint-read.regression.gold  richards-driver-snes-checkpoint-write.regression.gold  richards-driver-snes-initial-cond-anisotropic-k.regression.gold  richards-driver-snes-initial-cond-isotropic-k.regression.gold  richards-driver-snes-prob1-np4.regression.gold  richards-driver-snes-prob1.regression.gold  richards-driver-transientvar.regression.gold  richards-driver-ts-prob1-np4.regression.gold  richards-driver-ts-prob1.regression.gold  richards.cfg  richards_driver-np4.regression.gold  richards_driver-prob1-np4.regression.gold  richards_driver-prob1.regression.gold  richards_driver.c  richards_driver_snes_prob1_3x3x3_random.vec  run.sh  run_snes.sh  run_ts.sh
demo/salinity/: makefile  salinity.c
demo/sandbox/: makefile  sandbox.c  sandbox.cfg
demo/steady/: .gitignore  makefile  steady-bdm-prob1.regression.gold  steady-bdm-prob2.regression.gold  steady-bdm-prob3.regression.gold  steady-bdm-prob4.regression.gold  steady-q2-prob1.regression.gold  steady.c  (+14 more)
doc/: README.md  doxygenlayout.xml
docs/: CNAME  CODE_OF_CONDUCT.html  CONTRIBUTING.html  README.md  development.html  genindex.html  gettingstarted.html  index.html  intro.html  objects.inv  references.html  releasenotes.html  search.html  searchindex.js  styleguide.html
include/: richards.h  tdycore.h  tdycoremesh.h  tdycoreprivate.h  tdydm.h  tdydmperturbation.h  tdydriver.h  tdyio.h  tdymemory.h  tdypermeability.h  tdyporosity.h  tdyrichards.h  tdyrockproperties.h  tdyth.h  tdyti.h  tdytimers.h  tdyts.h  tdyutils.h
regression_tests/: Makefile  makefile  regression_tests.py
src/: richards.c  tdybdm.c  tdycharacteristiccurves.c  tdyconditions.c  tdycore.c  tdycoremesh.c  tdydebug.c  tdydiscretization.c  tdydm.c  tdydmperturbation.c  tdydriver.c  tdyeos.c  tdygenprofscript.c  tdyio.c  tdymaterialproperties.c  tdymemory.c  tdymfe.c  tdympfao.c  tdyout.c  tdypermeability.c  tdyporosity.c  tdyq2.c  tdyregression.c  tdyrichard.c  tdyrichards.c  tdyrockproperties.c  tdysalinity.c  tdysaturation.c  tdyth.c  tdyti.c  tdytimers.c  tdytpf.c  tdyts.c  tdyutils.c  tdywy.c
tools/: Dockerfile.petsc  build-petsc-docker-image.sh  tdyperfplot  tdyprof
(+197 files in other folders)
